--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="form-group row email">
-                        <label for="email" class="col-sm-5 col-md-4">{% trans "Email" %}</label>
+                        <label for="email" class="col-sm-5 col-md-4">{% trans "E-mail" %}</label>
                         <div class="col-sm-7 col-md-8">
                             <input id="email" class="form-control input-sm required" type="email" name="email"/>
                         </div>
@@ -203,66 +203,62 @@
             $('#email').blur(testEmail);
             $('#phone').blur(testPhone);
             function testUsername(uname) {
-                $('.form-group.username .errorlist').remove();
+                $('.errorlist.username').remove();
                 var $username = $('#username'),
                     username = $username.val();
                 username = username.replace(/ /g, '').toLowerCase();
                 $username.val(username);
                 if (uname) username = uname;
-                if (username.length < 3 || /\d{1}/.test(username.substr(0, 1))) {
-                    $('.errorlist.username').remove();
-                    $('<ul class="errorlist username">' +
-                        '<li>' + "{% trans "Please use at least 3 characters." %}" + '</li>' +
-                        '<li>' + "{% trans "Start with a letter." %}" + '</li>' +
-                        '</ul>').insertAfter('#username');
-                    $username.focus();
-                    return false;
-                }
-                return true;
+                if (username.length >= 3 && /[a-z]{1}/.test(username.substr(0, 1))) return true;
+                $('<ul class="errorlist username">' +
+                    '<li>' + "{% trans "Please use at least 3 characters." %}" + '</li>' +
+                    '<li>' + "{% trans "Start with a letter." %}" + '</li>' +
+                    '</ul>').insertAfter('#username');
+                $username.focus();
+                return false;
             }
             function testEmail() {
+                $('.errorlist.email').remove();
                 var $email = $('#email'),
                     email = $email.val().replace(/ /g, '').toLowerCase();
                 $email.val(email);
-                if (email.isValidEmail()) {
-                    $('.errorlist.email').remove();
-                    return true;
-                }
-                $('.form-group.email .errorlist').remove();
+                if (email.isValidEmail()) return true;
                 $('<ul class="errorlist email"><li>' + "{% trans "Please, enter valid email" %}" + '</li></ul>')
                         .insertAfter('#email');
                 $email.focus();
                 return false;
             }
             function testPhone() {
-                $('.form-group.phone .errorlist').remove();
+                $('.errorlist.phone').remove();
                 var $phone = $('#phone'),
                     phone = $phone.val().replace(/ /g, '');
                 $phone.val(phone);
-                if (phone.substr(0, 2) === '00' || !/\d{9,}/.test(phone)) {
-                    $('<ul class="errorlist phone">' +
-                        '<li>' + "{% trans "Please use digits only." %}" + '</li>' +
-                        '<li>' + "{% trans "Prepend country code if you are not in Cameroon." %}" + '</li>' +
-                        '<li>' + "{% trans "DO NOT prepend 00." %}" + '</li>' +
-                        '</ul>').insertAfter('#phone');
-                    return false
-                }
-                return true;
+                if (phone && phone.substr(0, 2) !== '00' && /\d{9,}/.test(phone)) return true;
+                $('<ul class="errorlist phone">' +
+                    '<li>' + "{% trans "Please use digits only." %}" + '</li>' +
+                    '<li>' + "{% trans "Prepend country code if you are not in Cameroon." %}" + '</li>' +
+                    '<li>' + "{% trans "DO NOT prepend 00." %}" + '</li>' +
+                    '</ul>').insertAfter('#phone');
+                $phone.focus();
+                return false;
             }
             function testPassword() {
-                $('.form-group.password .errorlist, .form-group.password2 .errorlist').remove();
-                var pwd1 = $('#password').val(),
+                $('.errorlist.password, .errorlist.password2').remove();
+                var $pwd1 = $('#password'),
+                    pwd1 = $pwd1.val(),
                     pwd2 = $('#password2').val();
                 if (pwd1.length < pwdMinLength) {
                     $('<ul class="errorlist password">' +
                         '<li>' + "{% trans "Password too short. Use at least 6 characters." %}" + '</li>' +
                         '</ul>').insertAfter('#password');
+                    $pwd1.focus();
                     return false
                 }
                 if (pwd1 !== pwd2) {
-                    $('<ul class="errorlist password">' +
+                    $('<ul class="errorlist password2">' +
                         '<li>' + "{% trans "Passwords mismatch! Please check." %}" + '</li>' +
                         '</ul>').insertAfter('#password2');
+                    $pwd1.focus();
                     return false
                 }
                 return true;
@@ -307,15 +303,14 @@
                 });
             }
             function checkDOB() {
+                $('.errorlist.dob').remove();
                 var day = parseInt($('#day').val()),
                     month = parseInt($('#month').val()),
                     year = parseInt($('#year').val()),
                     d = new Date(year + '/' + month + '/' + day);
-                if (!(d.getDate() === day && d.getMonth() === (month - 1) && d.getFullYear() === year)) {
-                    $('<p class="errorlist">{% trans "Invalid date. Please check." %}</p>').appendTo('#dob');
-                    return false;
-                }
-                return true;
+                if (d.getDate() === day && d.getMonth() === (month - 1) && d.getFullYear() === year) return true;
+                $('<p class="errorlist dob">{% trans "Invalid date. Please check." %}</p>').appendTo('#dob');
+                return false;
             }
         })()
     </script>
