Whenever the user tries to enter an email as a username. Check is made to ensure that email is correct

--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -209,6 +209,12 @@
                 username = username.replace(/ /g, '').toLowerCase();
                 $username.val(username);
                 if (uname) username = uname;
+                if (username.indexOf('@') > 0) {
+                    if (username.isValidEmail()) return true;
+                    $('<ul class="errorlist username"><li>' + "{% trans "Please, enter valid email" %}" + '</li></ul>')
+                            .insertAfter('#username');
+                    return false
+                }
                 if (username.length >= 3 && /[a-z]{1}/.test(username.substr(0, 1))) return true;
                 $('<ul class="errorlist username">' +
                     '<li>' + "{% trans "Please use at least 3 characters." %}" + '</li>' +
