--- a/accesscontrol/templates/accesscontrol/register.html
+++ b/accesscontrol/templates/accesscontrol/register.html
@@ -160,6 +160,12 @@
                 var $username = $('#rg-username'),
                     username = $username.val();
                 if (uname) username = uname;
+                if (username.indexOf('@') > 0) {
+                    if (username.isValidEmail()) return true;
+                    $('<ul class="errorlist username"><li>' + "{% trans "Please, enter valid email" %}" + '</li></ul>')
+                            .insertAfter('#rg-username');
+                    return false
+                }
                 if (username.length >= 3 && /[a-z]{1}/.test(username.substr(0, 1))) return true;
                 $('<ul class="errorlist username">' +
                     '<li>' + "{% trans "Please use at least 3 characters." %}" + '</li>' +
