--- a/core/templates/core/snippets/uploader_single.html
+++ b/core/templates/core/snippets/uploader_single.html
@@ -1,10 +1,10 @@
 {% load i18n humanize static auth_tokens %}
 
 <section class="photos" style="width: 100%">
-    <label class="required" style="float: left; width: 100%">{% trans "Upload image" %}</label>
+    <label class="required upload-title" style="float: left; width: 100%">{% trans "Upload image" %}</label>
     <div id="upload-container">
         {% if image.name %}
-        <div class="image" style="background-image: url('{{ obj.image.url }}')">
+        <div class="image" style="background-image: url('{{ image.url }}')">
         {% else %}
         <div class="image">
         {% endif %}
