--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -138,7 +138,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .15);}
 #navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;}
-.menu-button {float: left;padding: 20px 10px 0 10px;display: none;}
+.menu-button {float: left;padding: 20px 10px 0 10px;}
 .icon-bar {
     background: #fff;
     display: block;
@@ -150,7 +150,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 #navbar .glyphicon {color: #fff;cursor: pointer;font-size: 18px;}
 #navbar .back {display: none;float:left;font-size: 24px;margin: 12px 15px 0 10px;}
 .navbar-default .navbar-brand {padding: 18px 0 0 0;margin-left: 10px;}
-#navbar .navbar-header {height: 55px;overflow: hidden}
+#navbar .navbar-header {height: 55px;/* overflow: hidden */}
 #navbar-search {
     display: none;
     background: #fff;
@@ -175,11 +175,8 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 #navbar-results .ik-li .about {height: 35px;margin-bottom: 0;overflow: hidden;}
 
 
-#nav-xs li {display: inline-block;margin-right: 18px;}
-#nav-xs li:last-child {margin-right: 10px}
-#nav-xs {padding: 18px 0;}
-.dropdown-menu-xs  {float: left;width: 100%;background: #2c3e50;}
-.dropdown-menu-xs li {border-bottom: 1px solid #42505f;}
+.nav-xs > li {float: left;}
+.nav-xs {padding: 0;margin: 0}
 #site-menu {background: #2c3e50;padding: 0;}
 .glyphicon + .label {margin: -15px 0 0 12px;position: absolute;}
 
@@ -209,6 +206,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 
 @media (max-width: 767px) {
+    .card-xs {padding: 0}
     .modal .actions .action, .modal .actions .btn {margin-top: .6em}
     .ik-li.img-lg {padding: 8px 6px}
     .ik-li.img-lg .image {height: 100px; width: 130px;}
@@ -218,10 +216,24 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .ik-li .actions .glyphicon:first-child, #selection-control .glyphicon:first-child {margin-left: 0}
     .ik-li:not(.selected):hover .actions {background: #fff;border-radius: 3px;box-shadow: -1px 1px 7px 3px rgba(0, 0, 0, .1);margin-top: 0;position: absolute;padding: 3px 3px 5px;}
     .input-sm {font-size: 15px}
-    #navbar > .container-fluid {padding: 0;}
-    .navbar-default .navbar-brand {max-width: 115px;overflow: hidden;}
+    .nav-xs.navbar-nav>li>a {padding: 16px 12px;float: left;}
+    .nav-xs.navbar-nav>li:first-child>a {padding-left: 0}
+    .navbar-default .navbar-brand {margin-left: 0; max-width: 115px;overflow: hidden;}
     .navbar-default .navbar-brand > * {float: left; width: 300%}
     .container-fluid > strong.navbar-header {float: left;margin-left: 0;}
+    #navbar > .container-fluid {padding: 0}
+    .nav-xs.navbar-nav .open .dropdown-menu {
+        background-color: #fff;
+        border: 1px solid #dedede;
+        border-radius: 4px;
+        border-top-color: #e9e9e9;
+        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+        margin-top: -5px;
+        position: absolute;
+    }
+    .navbar-default .nav-xs.navbar-nav .open .dropdown-menu>li>a {color: #545454;line-height: 27px}
+    .navbar-right .dropdown-menu {left: auto;right: 3px;top: 10px;}
     #navbar-results {border-top: 1px solid #eee}
     .nav-tabs.swiper-wrapper {background: #f8f6f6; border-bottom: none}
     .nav-tabs > .tab {margin-bottom: -2px}
@@ -240,13 +252,13 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #content {padding-top: 75px; min-height: 450px}
     .form-wrapper {width: 360px}
     #navbar .navbar-header {float: left; height: auto}
-    .menu-button {cursor: pointer;padding: 21px 15px 0 0;}
+    .menu-button {cursor: pointer;padding: 24px 15px 0 0; display: none}
     .icon-bar {
         width: 26px;
         height: 3px;
     }
     #user-menu-xs {display: none}
-    .navbar-default .navbar-brand {padding: 19px 15px 19px 0;}
+    .navbar-default .navbar-brand {padding: 22px 15px 19px 0;}
     .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {margin-left: 0}
     #navbar .glyphicon.glyphicon-search {color: #708090;font-size: 15px;margin: 25px 0 0 10px;position: absolute} 
     #navbar-search {
@@ -279,6 +291,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #navbar-results .ik-li {padding: 3px}
     #navbar .glyphicon {font-size: 21px}
     #site-menu {background:none; }
+    .navbar-nav>li>a:not(.icon) {line-height: 25px;}
     .glyphicon + .label {margin: -15px 0 0 15px;position: absolute;}
     #content.container {padding-top: 75px;}
     .edge-panel-right {display: block;margin-right: 0;z-index: 20;}
@@ -287,6 +300,10 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .nav > .tab > a {padding: 10px 15px}
     .ik-li .date {float: right}
     .payment-method {display: inline}
+}
+@media (max-width: 991px) {
+    #navbar .navbar-nav .open .dropdown-menu {max-height: 450px;overflow: auto;min-width: 200px;}
+    #navbar.navbar-default .navbar-nav .open .dropdown-menu>li>a {line-height: 35px;}
 }
 @media (min-width: 992px) {
     .tiles {margin-left: -15px}
@@ -307,7 +324,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 @media (min-width: 1200px) {
     .tiles .ik-li {height: 300px;width: 25%;}
-    .menu-button {margin: 18px 15px 0 0;}
+    .menu-button {margin: -2px 0px 0 0;}
     .icon-bar {
         width: 30px;
         height: 3px;
@@ -318,7 +335,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #navbar-results .ik-li .about {max-width: 330px;}
     #item-detail #navbar-results .ik-li .info {max-width: 305px}
     #item-detail #navbar-results .ik-li .about {max-width: 310px;}
-    .member, .ik-li {padding: 15px}
+    .member, .ik-li {padding: 15px;}
     .member .info, .ik-li .info {float: left; margin-left: 30px}
 
     form#search .spinner {
