.nav-xs changed to #nav-xs

--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -51,7 +51,7 @@
                                 {% endblock %}
                                 {% block site_menu_xs %}
                                     <nav class="visible-xs pull-right">
-                                        <ul class="nav-xs nav navbar-nav navbar-right">
+                                        <ul id="nav-xs" class="nav navbar-nav navbar-right">
                                             <li class="show-search">
                                                 <a href="#">
                                                     <i class="glyphicon glyphicon-search"></i>
