Payments with MTN Mobile Money redirect to URL set in session with the name request.session['return_url']

--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -110,7 +110,7 @@
                             if (data.success) {
                                 $('#transaction-result').removeClass('text-info text-danger').addClass('alert alert-success')
                                         .text("{% trans "Transaction successful, you will be redirected." %}");
-                                window.location = data.next_url
+                                window.location = data.return_url
                             }
                         }
                     });
