--- a/accesscontrol/templates/accesscontrol/profile.html
+++ b/accesscontrol/templates/accesscontrol/profile.html
@@ -50,9 +50,9 @@
 
 {% block header_brand %}
     <a class="navbar-brand hidden-xs" href="{{ settings.IKWEN_BASE_URL }}">
-        <strong>ikwen</strong>
+        <strong><span class="letter-i">i</span>kwen</strong>
     </a>
-    <strong class="navbar-brand visible-xs">ikwen</strong>
+    <strong class="navbar-brand visible-xs"><span class="letter-i">i</span>kwen</strong>
 {% endblock %}
 
 {% block content %}
