--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -8,7 +8,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300|PT+Sans:400,700');
 
-body {color: #545454}
+body {color: #696969;}
 .working {cursor: wait}
 .success {background: #B6F1B6; border: 1px solid; border-radius: 3px; color: #039B03}
 .msg-tag.info {background: #dde9f1;border: 1px solid;border-radius: 3px;color: #1d2e9b}
@@ -150,6 +150,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 #navbar .glyphicon {color: #fff;cursor: pointer;font-size: 18px;}
 #navbar .back {display: none;float:left;font-size: 24px;margin: 12px 15px 0 10px;}
 .navbar-default .navbar-brand {padding: 18px 0 0 0;margin-left: 10px;}
+.letter-i {color: #26C6DA;float: none;}
 #navbar .navbar-header {height: 55px;/* overflow: hidden */}
 #navbar-search {
     display: none;
@@ -220,6 +221,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #nav-xs.navbar-nav>li:first-child>a {padding-left: 0}
     .navbar-default .navbar-brand {margin-left: 0;max-width: 100px;overflow: hidden;}
     .navbar-default .navbar-brand > * {float: left; width: 300%}
+    .letter-i {float: none}
     .container-fluid > strong.navbar-header {float: left;margin-left: 0;}
     #navbar > .container-fluid {padding: 0}
     #nav-xs.navbar-nav .open .dropdown-menu {
@@ -260,7 +262,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #user-menu-xs {display: none}
     .navbar-default .navbar-brand {padding: 22px 15px 19px 0;}
     .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {margin-left: 0}
-    #navbar .glyphicon.glyphicon-search {color: #708090;font-size: 15px;margin: 25px 0 0 10px;position: absolute} 
+    #navbar .glyphicon.glyphicon-search {color: #d2d2d2;font-size: 15px;margin: 25px 0 0 10px;position: absolute;} 
     #navbar-search {
         background: transparent;
         display: block;
@@ -272,7 +274,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         width: 300px;
         }
     #navbar-search input {
-        background: #142331;
+        background: #1a275d;
         border-radius: 3px;
         color: #ddd;
         float: right;
@@ -285,7 +287,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         margin: 0 0 0 280px;
     }
 
-    #navbar {height: 65px;background-color: #2c3e50;}
+    #navbar {height: 65px;}
     #navbar-results {margin-top: 1px;float: left; width: 100%}
     #navbar-results .stage {background: #fff;box-shadow: 1px 1px 9px 4px rgba(0, 0, 0, .1)}
     #navbar-results .ik-li {padding: 3px}
